Avoid horizontal scrollbars in code examples.

--- a/siciarz/assets/css/main.less
+++ b/siciarz/assets/css/main.less
@@ -233,6 +233,7 @@ html, body {
                 color: #aaa;
                 background: none;
                 border: none;
+                white-space: pre-wrap;
             }
         }
         iframe {
